Fixed dialog backdrop behavior by having it not wrap the foreground

--- a/styles.css
+++ b/styles.css
@@ -471,7 +471,7 @@ main {
 }
 
 dialog {
-  margin: auto;
+  padding: 0;
   position: fixed;
   inset: 0;
   z-index: 50;
@@ -487,14 +487,19 @@ dialog {
     backdrop-filter: blur(1px);
   }
 
+  .dialog-inner-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .modal-backdrop {
     position: fixed;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
   }
 
   .modal-foreground {
